# casper-private-auction

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  auction_deploy_arg_list.md  rust-toolchain
bid-purse/: Cargo.toml
bid-purse/src/: main.rs  main_delta.rs  main_extend.rs
casper-civic-verifier/: Cargo.toml
casper-private-auction-core/: Cargo.toml
casper-private-auction-core/src/: auction.rs  bids.rs  constants.rs  data.rs  error.rs  events.rs  lib.rs
casper-private-auction-dutch/: Cargo.toml
casper-private-auction-english/: Cargo.toml
casper-private-auction-installer/: Cargo.toml
casper-private-auction-installer/src/: main.rs
dutch/: Cargo.toml  README.md
dutch/src/: auction.rs  data.rs  error.rs  main.rs
english/: Cargo.toml  README.md
english/src/: auction.rs  bids.rs  data.rs  error.rs  events.rs  main.rs
example/casper-private-auction-tests/: Cargo.toml
example/casper-private-auction-tests/src/: integration_tests.rs
example/casper-private-auction-tests/src/mods/: constants.rs  enums.rs  mod.rs  structs.rs  test_auction.rs  utils.rs
example/casper-private-auction-tests/wasm/: bid-purse.wasm  casper-private-auction-installer.wasm  delta-bid-purse.wasm  extend-bid-purse.wasm
misc/: client_put_deploy_config.sh  deploy_auction.sh  deploy_nft.sh  seller_token_setup.sh
nctl-tests/: README.md  test.sh
nctl-tests/operation/: bid.sh  cancel_bid.sh  finalize.sh
nctl-tests/scenarios/: Dutch_1_bid.sh  English_2_bid.sh
nctl-tests/setup/: seller_token_setup.sh
nctl-tests/setup/actions/: deploy_auction.sh  deploy_kyc.sh  deploy_nft.sh  grant_gatekeeper.sh  mint_kyc.sh  mint_nft.sh
nctl-tests/setup/fixtures/: metacask-runtime-arg-builder
nctl-tests/setup/fixtures/contracts/: cask-token.wasm  civic-token.wasm
nctl-tests/setup/misc/: client_put_deploy_config.sh  encode_owner_token.rs
tests/: Cargo.toml  README.md
tests/src/: auction.rs  auction_args.rs  integration_tests.rs  lib.rs  nft.rs  utils.rs
tests/src/back/: enums.rs  error.rs  integration_tests.rs  structs.rs  test_auction.rs
tests/src/mods/: auction.rs  auction_args.rs  constants.rs  mod.rs  utils.rs
