[package]
name = "casper-civic-verifier"
version = "0.1.0"
authors = ["Alexander Limonov <alimonov@casperlabs.io>"]
edition = "2018"

[dependencies]
casper-contract = { git = "https://github.com/casper-network/casper-node", branch = "dev"}
casper-types = { git = "https://github.com/casper-network/casper-node", branch = "dev"}
