[package]
name = "casper-private-auction-core"
version = "0.2.1"
authors = ["Alexander Limonov <alimonov@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
