[package]
name = "casper-private-auction-english"
version = "0.1.0"
authors = ["Alexander Limonov <alimonov@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.3.0"
casper-types = "1.3.0"
