[package]
name = "casper-private-auction-installer"
version = "0.3.0"
authors = ["Alexander Limonov <alimonov@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.3.3"
casper-types = "1.3.3"
casper-private-auction-core = { path = "../casper-private-auction-core"}

[[bin]]
name = "casper-private-auction-installer"
path = "src/main.rs"
bench = false
doctest = false
test = false