[package]
name = "casper-private-auction-installer"
version = "0.9.0"
authors = ["Alexander Limonov <alimonov@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5"
casper-private-auction-core = { path = "../casper-private-auction-core" }
base16 = { version = "0.2", default-features = false, features = ["alloc"] }

[[bin]]
name = "casper-private-auction-installer"
path = "src/main.rs"
bench = false
doctest = false
test = false
