[package]
name = "tests"
version = "0.3.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "=1.4.1"
casper-types = "=1.4.1"
casper-engine-test-support = "=1.4.1"
casper-hashing = "=1.4.1"
maplit = "*"
hex = "*"

[lib]
name = "tests"
path = "src/lib.rs"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-engine-test-support/test-support", "casper-contract/test-support"]
