[package]
name = "casper-private-auction-tests"
version = "0.1.0"
authors = ["Gregory Roussac <gregory@casperlabs.io>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-engine-test-support = "2.2.0"
casper-execution-engine = "2.0.1"
casper-types = "1.5.0"
tests = { path = "../../tests" }

[[bin]]
name = "casper-private-auction-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false

[features]
default = [
  "casper-contract/std",
  "casper-contract/test-support",
  "casper-types/std",
  "casper-engine-test-support/test-support",
]
